--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,51 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/cat.jpg" style="width: 300px;" alt="cat">
+    <div class="index-wrap">
+      <div class="banner-section">
+        <div class="container">
+          <h2 class="text-red_200 fz-2">Promise-Desert 2020 早春系列</h2>
+          <h1 class="text-red_200 fz-1 fw-bold mb-1">看得清，才能看得遠</h1>
+          <a class="text-white fz-5 bg-primary px-3 py-6px" href="#">立即購買</a>
+        </div>
+      </div>
+
+      <div class="intro-section bg-red_300 py-20">
+        <div class="container">
+          <h3 class="section-title text-red_200 fz-2 mb-8">用專業的心，做專業的事</h3>
+          <ul class="intro-list">
+            <li class="intro-item mr-6">
+              <div class="img-group">
+                <img class="mb-4" src="../assets/images/home-section2-1.png" alt="price">
+                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+              </div>
+              <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+            </li>
+            <li class="intro-item mr-6">
+              <div class="img-group">
+                <img class="mb-4" src="../assets/images/home-section2-2.png" alt="clock">
+                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+              </div>
+              <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+            </li>
+            <li class="intro-item mr-6">
+              <div class="img-group">
+                <img class="mb-4" src="../assets/images/home-section2-3.png" alt="heart">
+                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+              </div>
+              <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+            </li>
+            <li class="intro-item">
+              <div class="img-group">
+                <img class="mb-4" src="../assets/images/home-section2-4.png" alt="glasses">
+                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+              </div>
+              <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <%- include('./layout/footer'); -%>
 
