--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
 
       <div class="intro-section bg-red_300 py-20">
         <div class="container">
-          <h3 class="section-title text-red_200 fz-2 mb-8">用專業的心，做專業的事</h3>
+          <h3 class="section-title fw-bold text-red_200 fz-2 mb-8">用專業的心，做專業的事</h3>
           <ul class="intro-list">
             <li class="intro-item mr-6">
               <div class="img-group">
@@ -52,6 +52,112 @@
             </li>
           </ul>
         </div>
+      </div>
+
+      <div class="category-section py-20">
+        <div class="container">
+          <h3 class="section-title fw-bold fz-2 text-red_200 mb-12">經典系列鏡框</h3>
+          <ul class="category-list">
+            <li class="category-item">
+              <img class="mb-2" src="../assets/images/home-section3-1.png" alt="people">
+              <h4 class="fz-2 text-primary">OPTICAL</h4>
+            </li>
+            <li class="category-item">
+              <img class="mb-2" src="../assets/images/home-section3-2.png" alt="people">
+              <h4 class="fz-2 text-primary">SUNGLASSES</h4>
+            </li>
+            <li class="category-item">
+              <img class="mb-2" src="../assets/images/home-section3-3.png" alt="people">
+              <h4 class="fz-2 text-primary">FUNCTIONAL</h4>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="collaborative-section py-20">
+        <div class="container">
+          <h3 class="section-title text-white fz-2 fw-bold mb-12">聯名設計鏡框</h3>
+          <ul class="collaborative-list">
+            <li class="collaborative-item">
+              <img src="../assets/images/home-section4-1.png" alt="double a+">
+              <h4 class="fz-2 text-primary bg-white py-2">DOUBLE A+</h4>
+            </li>
+            <li class="collaborative-item">
+              <img src="../assets/images/home-section4-2.png" alt="youth">
+              <h4 class="fz-2 text-primary bg-white py-2">YOUTH</h4>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="recommended-section py-20">
+      <div class="container">
+        <h3 class="section-title fz-2 fw-bold text-red_200 mb-12">顧客推薦</h3>
+        <ul class="recommended-list">
+          <li class="recommended-item">
+            <img src="../assets/images/home-section5-1.png" alt="people">
+            <div class="recommended-item-main p-4">
+              <h4 class="mb-2">Jessy</h4>
+              <p class="recommended-item-text mb-2">眼鏡品質優良，下次還會想來這邊購買！</p>
+              <p class="text-gray_100 fz-8">2021/06/20</p>
+            </div>
+          </li>
+          <li class="recommended-item">
+            <img src="../assets/images/home-section5-2.png" alt="people">
+            <div class="recommended-item-main p-4">
+              <h4 class="mb-2">凱倫</h4>
+              <p class="recommended-item-text mb-2">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+              <p class="text-gray_100 fz-8">2021/04/18</p>
+            </div>
+          </li>
+          <li class="recommended-item">
+            <img src="../assets/images/home-section5-3.png" alt="people">
+            <div class="recommended-item-main p-4">
+              <h4 class="mb-2">悠悠</h4>
+              <p class="recommended-item-text mb-2">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+              <p class="text-gray_100 fz-8">2020/12/25</p>
+            </div>
+          </li>
+          <li class="recommended-item">
+            <img src="../assets/images/home-section5-4.png" alt="people">
+            <div class="recommended-item-main p-4">
+              <h4 class="mb-2">Kyuan</h4>
+              <p class="recommended-item-text mb-2">服務很好，品質沒有任何問題，非常喜歡。</p>
+              <p class="text-gray_100 fz-8">2020/10/31</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="contact-section bg-red_300 py-20">
+      <h3 class="section-title fz-2 text-red_200 fw-bold mb-12">顧客推薦</h3>
+      <div class="form-container">
+        <p class="fz-5 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <form action="">
+          <div class="input-group mb-4">
+            <label class="mb-2" for="name">姓名</label>
+            <input id="name" class="px-3 py-6px" type="text" placeholder="陳小明">
+          </div>
+          <div class="input-group mb-4">
+            <label class="mb-2" for="tel">聯絡電話</label>
+            <input id="tel" class="px-3 py-6px" type="tel" placeholder="0912-345-678">
+          </div>
+          <div class="input-group mb-4">
+            <label class="mb-2" for="email">電子郵件</label>
+            <input id="email" class="px-3 py-6px" type="email" placeholder="0912-345-678">
+          </div>
+          <div class="input-group mb-4">
+            <label class="mb-2" for="review">意見反應</label>
+            <textarea class="p-3" name="review" id="review" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
+          </div>
+          <div class="policy-group mb-12">
+            <input id="policy" class="mr-2" type="checkbox" name="policy">
+            <label for="policy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+          </div>
+          <button type="submit" class="submit-btn text-white bg-primary p-4">確認送出</button>
+        </form>
       </div>
     </div>
 
