切版 /products/optical, /products/sunglasses

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,41 +12,41 @@
     <div class="index-wrap">
       <div class="banner-section">
         <div class="container">
-          <h2 class="text-red_200 fz-2">Promise-Desert 2020 早春系列</h2>
-          <h1 class="text-red_200 fz-1 fw-bold mb-1">看得清，才能看得遠</h1>
-          <a class="text-white fz-5 bg-primary px-3 py-6px" href="#">立即購買</a>
+          <h2 class="text-red_200 fz-48">Promise-Desert 2020 早春系列</h2>
+          <h1 class="text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
+          <a class="text-white fz-20 bg-primary px-3 py-6px" href="#">立即購買</a>
         </div>
       </div>
 
       <div class="intro-section bg-red_300 py-20">
         <div class="container">
-          <h3 class="section-title fw-bold text-red_200 fz-2 mb-8">用專業的心，做專業的事</h3>
+          <h3 class="section-title fw-bold text-red_200 fz-48 mb-8">用專業的心，做專業的事</h3>
           <ul class="intro-list">
             <li class="intro-item mr-6">
               <div class="img-group">
                 <img class="mb-4" src="../assets/images/home-section2-1.png" alt="price">
-                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+                <h4 class="fz-24 text-red_200 mb-2">單一價格</h4>
               </div>
               <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
             </li>
             <li class="intro-item mr-6">
               <div class="img-group">
                 <img class="mb-4" src="../assets/images/home-section2-2.png" alt="clock">
-                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+                <h4 class="fz-24 text-red_200 mb-2">20 分鐘即可取件</h4>
               </div>
               <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
             </li>
             <li class="intro-item mr-6">
               <div class="img-group">
                 <img class="mb-4" src="../assets/images/home-section2-3.png" alt="heart">
-                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+                <h4 class="fz-24 text-red_200 mb-2">安心售後服務</h4>
               </div>
               <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
             </li>
             <li class="intro-item">
               <div class="img-group">
                 <img class="mb-4" src="../assets/images/home-section2-4.png" alt="glasses">
-                <h4 class="fz-4 text-red_200 mb-2">單一價格</h4>
+                <h4 class="fz-24 text-red_200 mb-2">關於鏡片</h4>
               </div>
               <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
             </li>
@@ -56,19 +56,19 @@
 
       <div class="category-section py-20">
         <div class="container">
-          <h3 class="section-title fw-bold fz-2 text-red_200 mb-12">經典系列鏡框</h3>
+          <h3 class="section-title fw-bold fz-48 text-red_200 mb-12">經典系列鏡框</h3>
           <ul class="category-list">
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-1.png" alt="people">
-              <h4 class="fz-2 text-primary">OPTICAL</h4>
+              <h4 class="fz-48 text-primary">OPTICAL</h4>
             </li>
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-2.png" alt="people">
-              <h4 class="fz-2 text-primary">SUNGLASSES</h4>
+              <h4 class="fz-48 text-primary">SUNGLASSES</h4>
             </li>
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-3.png" alt="people">
-              <h4 class="fz-2 text-primary">FUNCTIONAL</h4>
+              <h4 class="fz-48 text-primary">FUNCTIONAL</h4>
             </li>
           </ul>
         </div>
@@ -76,15 +76,15 @@
 
       <div class="collaborative-section py-20">
         <div class="container">
-          <h3 class="section-title text-white fz-2 fw-bold mb-12">聯名設計鏡框</h3>
+          <h3 class="section-title text-white fz-48 fw-bold mb-12">聯名設計鏡框</h3>
           <ul class="collaborative-list">
             <li class="collaborative-item">
               <img src="../assets/images/home-section4-1.png" alt="double a+">
-              <h4 class="fz-2 text-primary bg-white py-2">DOUBLE A+</h4>
+              <h4 class="fz-48 text-primary bg-white py-2">DOUBLE A+</h4>
             </li>
             <li class="collaborative-item">
               <img src="../assets/images/home-section4-2.png" alt="youth">
-              <h4 class="fz-2 text-primary bg-white py-2">YOUTH</h4>
+              <h4 class="fz-48 text-primary bg-white py-2">YOUTH</h4>
             </li>
           </ul>
         </div>
@@ -93,14 +93,14 @@
 
     <div class="recommended-section py-20">
       <div class="container">
-        <h3 class="section-title fz-2 fw-bold text-red_200 mb-12">顧客推薦</h3>
+        <h3 class="section-title fz-48 fw-bold text-red_200 mb-12">顧客推薦</h3>
         <ul class="recommended-list">
           <li class="recommended-item">
             <img src="../assets/images/home-section5-1.png" alt="people">
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">Jessy</h4>
               <p class="recommended-item-text mb-2">眼鏡品質優良，下次還會想來這邊購買！</p>
-              <p class="text-gray_100 fz-8">2021/06/20</p>
+              <p class="text-gray_100 fz-14">2021/06/20</p>
             </div>
           </li>
           <li class="recommended-item">
@@ -108,7 +108,7 @@
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">凱倫</h4>
               <p class="recommended-item-text mb-2">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-              <p class="text-gray_100 fz-8">2021/04/18</p>
+              <p class="text-gray_100 fz-14">2021/04/18</p>
             </div>
           </li>
           <li class="recommended-item">
@@ -116,7 +116,7 @@
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">悠悠</h4>
               <p class="recommended-item-text mb-2">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-              <p class="text-gray_100 fz-8">2020/12/25</p>
+              <p class="text-gray_100 fz-14">2020/12/25</p>
             </div>
           </li>
           <li class="recommended-item">
@@ -124,7 +124,7 @@
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">Kyuan</h4>
               <p class="recommended-item-text mb-2">服務很好，品質沒有任何問題，非常喜歡。</p>
-              <p class="text-gray_100 fz-8">2020/10/31</p>
+              <p class="text-gray_100 fz-14">2020/10/31</p>
             </div>
           </li>
         </ul>
@@ -132,9 +132,9 @@
     </div>
 
     <div class="contact-section bg-red_300 py-20">
-      <h3 class="section-title fz-2 text-red_200 fw-bold mb-12">顧客推薦</h3>
+      <h3 class="section-title fz-48 text-red_200 fw-bold mb-12">顧客推薦</h3>
       <div class="form-container">
-        <p class="fz-5 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <p class="fz-20 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
         <form action="">
           <div class="input-group mb-4">
             <label class="mb-2" for="name">姓名</label>
