--- a/pages/products/sunglasses.html
+++ b/pages/products/sunglasses.html
@@ -10,18 +10,18 @@
 
   <div class="sunglasses-wrap">
     <div class="products-nav-section container">
-      <%- include('./components/products-nav', {active: 'optical'}) -%>
+      <%- include('./components/products-nav', {active: 'sunglasses'}) -%>
     </div>
 
     <div class="imgs-section mb-20">
       <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-3.png', '../../assets/images/product-header-4.png']}) -%>
     </div>
 
-    <h2 class="subtitle fz-42">Celluloid Combi</h2>
+    <h2 class="subtitle fz-42">2020 NEW COLLECTION</h2>
     <h1 class="title fz-32 mb-8">賽璐珞鈦金屬混合鏡框</h1>
   
     <div class="products-section container">
-      <%- include('./components/products-list', {perRow: 3, products: [{title: 'BJ41600S', src :'../../assets/images/product-1.png'}, {title: 'BJ41600T', src: '../../assets/images/product-2.png'}, {title: 'BJ41600U', src: '../../assets/images/product-3.png'}, {title: 'BJ41600V', src: '../../assets/images/product-4.png'}, {title: 'BJ41600W', src: '../../assets/images/product-5.png'}, {title: 'BJ41600X', src: '../../assets/images/product-6.png'}, {title: 'BJ41600Y', src: '../../assets/images/product-7.png'}, {title: 'BJ41600Z', src: '../../assets/images/product-8.png'}, {title: 'BJ41600A', src: '../../assets/images/product-9.png'}, {title: 'BJ41600B', src: '../../assets/images/product-10.png'}, {title: 'BJ41600C', src: '../../assets/images/product-11.png'}, {title: 'BJ41600D', src: '../../assets/images/product-12.png'}]}) -%>
+      <%- include('./components/products-list', {perRow: 3, products: [{title: 'BJ41600S', src :'../../assets/images/product-1.png'}, {title: 'BJ41600T', src: '../../assets/images/product-2.png'}, {title: 'BJ41600U', src: '../../assets/images/product-3.png'}, {title: 'BJ41600V', src: '../../assets/images/product-4.png'}, {title: 'BJ41600W', src: '../../assets/images/product-5.png'}, {title: 'BJ41600X', src: '../../assets/images/product-6.png'}]}) -%>
     </div>
   
     <div class="pagination-section mb-20">
