拆分 component: select-group

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -13,13 +13,9 @@
       <div class="mb-8">
         <%- include('./components/page-title', {title: '門市據點'}); -%>
       </div>
-      <div class="select-group mb-10">
-        <h3 class="fz-24 mr-4">選擇地區</h3>
-        <select name="city" class="fz-18 text-gray_500 px-3 py-6px">
-          <option value="台北市">台北市</option>
-          <option value="台中市">台中市</option>
-          <option value="高雄市">高雄市</option>
-        </select>
+
+      <div class="mb-8">
+        <%- include('./components/select-group', {title: '選擇地區', options: ['台北市', '台中市', '高雄市']}) -%>
       </div>
 
       <div class="mb-8">
