--- a/pages/location.html
+++ b/pages/location.html
@@ -17,7 +17,33 @@
       <div class="mb-10">
         <%- include('./components/select-group', {title: '選擇分店', options: ['台北中山旗艦店', '台北綠園店', '台中清水旗艦店', '高雄中正形象店', '高雄夢時代店']}); -%>
       </div>
-      
+
+      <div class="location-main">
+        <div class="location-card text-black_100 mr-6">
+          <img class="location-card-img" src="../assets/images/store-1.png" alt="store">
+          <div class="location-card-main">
+            <h2 class="location-card-title fz-24 px-6 py-2">台北中山旗艦店</h2>
+            <div class="location-card-main fz-20 px-6 py-4">
+              <a class="location-card-text-group text-black_100 mb-2" href="tel:+88620001234">
+                <span class="material-icons-outlined mr-2">call</span>
+                <span>電話：(02)000-1234</span>
+              </a>
+              <p class="location-card-text-group mb-2">
+                <span class="material-icons-outlined mr-2">schedule</span>
+                <span>營業時間：10:00-21:00</span>
+              </p>
+              <p class="location-card-text-group mb-4">
+                <span class="material-icons-outlined mr-2">location_on</span>
+                <span>地址：台北市中山區南京東路25巷2-1號</span>
+              </p>
+            </div>
+          </div>
+          <a href="/week3-4/pages/location.html" class="location-detail-link fz-20 bg-black text-white py-4">詳細資訊</a>
+        </div>
+        <div class="google-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1950.515366406721!2d121.52114487824943!3d25.046013783574207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9729f13e59d%3A0x8398ab0c37b6418!2z5Y-w5YyX6LuK56uZ!5e0!3m2!1szh-TW!2sjp!4v1690163261633!5m2!1szh-TW!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </div>
   </div>
 
