--- a/pages/location.html
+++ b/pages/location.html
@@ -32,13 +32,12 @@
                 <span class="material-icons-outlined mr-2">schedule</span>
                 <span>營業時間：10:00-21:00</span>
               </p>
-              <p class="location-card-text-group mb-4">
+              <p class="location-card-text-group">
                 <span class="material-icons-outlined mr-2">location_on</span>
                 <span>地址：台北市中山區南京東路25巷2-1號</span>
               </p>
             </div>
           </div>
-          <a href="/week3-4/pages/location.html" class="location-detail-link fz-20 bg-black text-white py-4">詳細資訊</a>
         </div>
         <div class="google-map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1950.515366406721!2d121.52114487824943!3d25.046013783574207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9729f13e59d%3A0x8398ab0c37b6418!2z5Y-w5YyX6LuK56uZ!5e0!3m2!1szh-TW!2sjp!4v1690163261633!5m2!1szh-TW!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
