--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,11 @@
 <body>
   <%- include('./layout/header'); -%>
 
-  <div class="blog-wrap pt-24">
+  <div class="blog-wrap">
+    <div class="mb-24">
+      <%- include('./components/article-nav') -%>
+    </div>
+
     <div class="container">
       <div class="mb-8">
         <%- include('./components/page-title', {title: '部落格'}); -%>
