切版 RWD(tablet 992px) /index

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,9 @@
     <div class="index-wrap">
       <div class="banner-section">
         <div class="container">
-          <h2 class="text-red_200 fz-48">Promise-Desert 2020 早春系列</h2>
+          <h2 class="banner-subtitle text-red_200 fz-48">Promise-Desert 2020 早春系列</h2>
           <h1 class="text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
-          <a class="text-white fz-20 bg-primary px-3 py-6px" href="#">立即購買</a>
+          <a class="products-link text-white fz-20 bg-primary px-3 py-6px" href="/week3-4/pages/products/optical.html">立即購買</a>
         </div>
       </div>
 
@@ -132,9 +132,9 @@
     </div>
 
     <div class="contact-section bg-red_300 py-20">
-      <h3 class="section-title fz-48 text-red_200 fw-bold mb-12">顧客推薦</h3>
+      <h3 class="section-title fz-48 text-red_200 fw-bold mb-12">聯絡我們</h3>
       <div class="form-container">
-        <p class="fz-20 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <p class="contact-text fz-20 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
         <form action="">
           <div class="input-group mb-4">
             <label class="mb-2" for="name">姓名</label>
@@ -156,7 +156,7 @@
             <input id="policy" class="mr-2" type="checkbox" name="policy">
             <label for="policy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
           </div>
-          <button type="submit" class="submit-btn text-white bg-primary p-4">確認送出</button>
+          <button type="submit" class="submit-btn fz-16 text-white bg-primary p-4">確認送出</button>
         </form>
       </div>
     </div>
