切版 RWD(tablet 992px) /products/optical, /products/sunglasses

--- a/pages/products/sunglasses.html
+++ b/pages/products/sunglasses.html
@@ -20,7 +20,7 @@
     <h2 class="subtitle fz-42">2020 NEW COLLECTION</h2>
     <h1 class="title fz-32 mb-8">賽璐珞鈦金屬混合鏡框</h1>
   
-    <div class="products-section container">
+    <div class="products-section container mb-20">
       <%- include('./components/products-list', {perRow: 3, products: [{title: 'BJ41600S', src :'../../assets/images/product-1.png'}, {title: 'BJ41600T', src: '../../assets/images/product-2.png'}, {title: 'BJ41600U', src: '../../assets/images/product-3.png'}, {title: 'BJ41600V', src: '../../assets/images/product-4.png'}, {title: 'BJ41600W', src: '../../assets/images/product-5.png'}, {title: 'BJ41600X', src: '../../assets/images/product-6.png'}]}) -%>
     </div>
   
