切版 RWD(tablet 992px) /blog

--- a/pages/products/optical.html
+++ b/pages/products/optical.html
@@ -20,7 +20,7 @@
       <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-sm-1.png', '../../assets/images/product-header-sm-2.png']}) -%>
     </div>
 
-    <h2 class="subtitle fz-42">Celluloid Combi</h2>
+    <h2 class="subtitle font-roboto fz-42">Celluloid Combi</h2>
     <h1 class="title fz-32 mb-8">賽璐珞鈦金屬混合鏡框</h1>
   
     <div class="products-section container mb-20">
