--- a/pages/products/sunglasses.html
+++ b/pages/products/sunglasses.html
@@ -17,7 +17,7 @@
       <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-3.png', '../../assets/images/product-header-4.png']}) -%>
     </div>
 
-    <h2 class="subtitle fz-42">2020 NEW COLLECTION</h2>
+    <h2 class="subtitle font-roboto fz-42">2020 NEW COLLECTION</h2>
     <h1 class="title fz-32 mb-8">賽璐珞鈦金屬混合鏡框</h1>
   
     <div class="products-section container mb-20">
