--- a/pages/blog.html
+++ b/pages/blog.html
@@ -9,7 +9,7 @@
   <%- include('./layout/header'); -%>
 
   <div class="blog-wrap">
-    <div class="mb-24">
+    <div class="article-nav-container mb-24">
       <%- include('./components/article-nav') -%>
     </div>
 
@@ -19,47 +19,62 @@
       </div>
 
       <ul class="articles-list mb-32">
-        <li class="article-item mb-16">
+        <li class="article-item mr-6 mb-16" onclick="go('/week3-4/pages/article.html')">
           <img class="article-img mr-6" src="../assets/images/blog-1.png" alt="valentines special">
           <div class="article-main">
             <h2 class="text-red_200 fz-32">情人特別企劃</h2>
-            <h3 class="fz-20 mb-4">2020 Valentine’s Special</h3>
+            <div class="article-subtitle-group">
+              <h3 class="fz-20 mb-4">2020 Valentine’s Special</h3>
+              <p class="time">2020/02/14</p>
+            </div>
             <p class="article-text fz-20 text-gray_300">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！ 即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻，只要從未來過本店的新朋友，綁定官方LINE好友，都可享專屬優惠⋯⋯</p>
             <a class="article-link fz-36 text-red_200" href="/week3-4/pages/article.html">more</a>
           </div>
         </li>
-        <li class="article-item mb-16">
+        <li class="article-item mr-6 mb-16" onclick="go('/week3-4/pages/article.html')">
           <img class="article-img mr-6" src="../assets/images/blog-2.png" alt="Street Interview">
           <div class="article-main">
             <h2 class="text-red_200 fz-32">街頭潮人訪問</h2>
-            <h3 class="fz-20 mb-4">Street Interview</h3>
+            <div class="article-subtitle-group">
+              <h3 class="fz-20 mb-4">Street Interview</h3>
+              <p class="time">2020/02/02</p>
+            </div>
             <p class="article-text fz-20 text-gray_300">炎熱的夏季裡，衣著選擇經常希望以簡潔的風格為主，但有時單純只穿搭 T 恤或短袖開襟襯衫，又覺得整體造型度有點不足嗎？那麼不妨可以透過「配件」，為穿搭點綴出與眾不同的視覺層次，而本季有哪些必備的配件系列呢？一起從以下推薦的 3 款單品，讓你瞬間帥氣爆棚散發型男品味⋯⋯</p>
             <a class="article-link fz-36 text-red_200" href="/week3-4/pages/article.html">more</a>
           </div>
         </li>
-        <li class="article-item mb-16">
+        <li class="article-item mr-6 mb-16" onclick="go('/week3-4/pages/article.html')">
           <img class="article-img mr-6" src="../assets/images/blog-3.png" alt="New Selection">
           <div class="article-main">
             <h2 class="text-red_200 fz-32">春季新品上市</h2>
-            <h3 class="fz-20 mb-4">New Selection</h3>
+            <div class="article-subtitle-group">
+              <h3 class="fz-20 mb-4">New Selection</h3>
+              <p class="time">2020/02/02</p>
+            </div>
             <p class="article-text fz-20 text-gray_300">2020 年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</p>
             <a class="article-link fz-36 text-red_200" href="/week3-4/pages/article.html">more</a>
           </div>
         </li>
-        <li class="article-item mb-16">
+        <li class="article-item mr-6 mb-16" onclick="go('/week3-4/pages/article.html')">
           <img class="article-img mr-6" src="../assets/images/blog-4.png" alt="Sales for Designer">
           <div class="article-main">
             <h2 class="text-red_200 fz-32">設計師獨享鏡框優惠</h2>
-            <h3 class="fz-20 mb-4">Sales for Designer</h3>
+            <div class="article-subtitle-group">
+              <h3 class="fz-20 mb-4">Sales for Designer</h3>
+              <p class="time">2020/01/18</p>
+            </div>
             <p class="article-text fz-20 text-gray_300">2020 年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</p>
             <a class="article-link fz-36 text-red_200" href="/week3-4/pages/article.html">more</a>
           </div>
         </li>
-        <li class="article-item mb-16">
+        <li class="article-item mr-6 mb-16" onclick="go('/week3-4/pages/article.html')">
           <img class="article-img mr-6" src="../assets/images/blog-5.png" alt="Summer Special">
           <div class="article-main">
             <h2 class="text-red_200 fz-32">抵抗夏日大作戰</h2>
-            <h3 class="fz-20 mb-4">Summer Special</h3>
+            <div class="article-subtitle-group">
+              <h3 class="fz-20 mb-4">Summer Special</h3>
+              <p class="time">2019/08/07</p>
+            </div>
             <p class="article-text fz-20 text-gray_300">2020 年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</p>
             <a class="article-link fz-36 text-red_200" href="/week3-4/pages/article.html">more</a>
           </div>
@@ -75,5 +90,11 @@
   <%- include('./layout/footer'); -%>
   
   <script type="module" src="../main.js"></script>
+  <script>
+    function go(href) {
+      const tabletWidth = 992;
+      if (window.innerWidth < tabletWidth) location.href = href;
+    }
+  </script>
 </body>
 </html>
