--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <div class="index-wrap">
       <div class="banner-section">
         <div class="container">
-          <h2 class="banner-subtitle text-red_200 fz-48">Promise-Desert 2020 早春系列</h2>
+          <h2 class="banner-subtitle text-red_200 fz-48"><span class="font-roboto">Promise-Desert 2020</span> 早春系列</h2>
           <h1 class="text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
           <a class="products-link text-white fz-20 bg-primary px-3 py-6px" href="/week3-4/pages/products/optical.html">立即購買</a>
         </div>
@@ -60,15 +60,15 @@
           <ul class="category-list">
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-1.png" alt="people">
-              <h4 class="fz-48 text-primary">OPTICAL</h4>
+              <h4 class="fz-48 text-primary fw-900 font-roboto">OPTICAL</h4>
             </li>
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-2.png" alt="people">
-              <h4 class="fz-48 text-primary">SUNGLASSES</h4>
+              <h4 class="fz-48 text-primary fw-900 font-roboto">SUNGLASSES</h4>
             </li>
             <li class="category-item">
               <img class="mb-2" src="../assets/images/home-section3-3.png" alt="people">
-              <h4 class="fz-48 text-primary">FUNCTIONAL</h4>
+              <h4 class="fz-48 text-primary fw-900 font-roboto">FUNCTIONAL</h4>
             </li>
           </ul>
         </div>
@@ -80,11 +80,11 @@
           <ul class="collaborative-list">
             <li class="collaborative-item">
               <img src="../assets/images/home-section4-1.png" alt="double a+">
-              <h4 class="fz-48 text-primary bg-white py-2">DOUBLE A+</h4>
+              <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">DOUBLE A+</h4>
             </li>
             <li class="collaborative-item">
               <img src="../assets/images/home-section4-2.png" alt="youth">
-              <h4 class="fz-48 text-primary bg-white py-2">YOUTH</h4>
+              <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">YOUTH</h4>
             </li>
           </ul>
         </div>
