切版 RWD(tablet 992px) /article

--- a/pages/article.html
+++ b/pages/article.html
@@ -9,7 +9,7 @@
   <%- include('./layout/header') -%>
 
   <div class="article-wrap pb-20">
-    <div class="mb-6">
+    <div class="article-nav-container mb-6">
       <%- include('./components/article-nav') -%>
     </div>
     
@@ -27,9 +27,9 @@
       </ul>
 
       <div class="article-main">
-        <div class="article-container mr-6">
+        <div class="article-container">
           <h1 class="fz-48">情人特別企劃</h1>
-          <h2 class="fz-24 mb-4">2020 Valentine’s Special</h2>
+          <h2 class="article-subtitle fz-24 mb-4">2020 Valentine’s Special</h2>
           <div class="article-content mb-10">
             <img class="mb-2" src="../assets/images/blog-1.png" alt="people">
             <p class="text-gray_300 mb-10">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
@@ -45,7 +45,7 @@
         </div>
         <aside class="tags-sidebar text-primary fw-bold">
           <h3 class="tags-sidebar-title fz-32 mb-1">
-            <span class="material-icons-outlined fz-32 mr-3">label</span>
+            <span class="material-icons-outlined icon fz-32 mr-3">label</span>
             <span>tags</span>
           </h3>
           <ul class="aside-tags-list fz-24">
@@ -62,7 +62,7 @@
 
       <div class="article-footer">
         <div class="share-group pb-4 mb-6">
-          <p class="mr-4">Share</p>
+          <p class="font-roboto fw-bold mr-4">Share</p>
           <a class="mr-4" href="#"><img class="social-icon" src="../assets/images/logo-facebook.png" alt="facebook"></a>
           <a href="#"><img class="social-icon" src="../assets/images/logo-instagram.png" alt="instagram"></a>
         </div>
@@ -79,7 +79,6 @@
       </div>
     </div>
   </div>
-
   
   <%- include('./layout/footer') -%> 
   
