切版 RWD(phone 767px) component: header, footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -132,32 +132,34 @@
     </div>
 
     <div class="contact-section bg-red_300 py-20">
-      <h3 class="section-title fz-48 text-red_200 fw-bold mb-12">聯絡我們</h3>
-      <div class="form-container">
-        <p class="contact-text fz-20 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-        <form action="">
-          <div class="input-group mb-4">
-            <label class="mb-2" for="name">姓名</label>
-            <input id="name" class="px-3 py-6px" type="text" placeholder="陳小明">
-          </div>
-          <div class="input-group mb-4">
-            <label class="mb-2" for="tel">聯絡電話</label>
-            <input id="tel" class="px-3 py-6px" type="tel" placeholder="0912-345-678">
-          </div>
-          <div class="input-group mb-4">
-            <label class="mb-2" for="email">電子郵件</label>
-            <input id="email" class="px-3 py-6px" type="email" placeholder="0912-345-678">
-          </div>
-          <div class="input-group mb-4">
-            <label class="mb-2" for="review">意見反應</label>
-            <textarea class="p-3" name="review" id="review" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
-          </div>
-          <div class="policy-group mb-12">
-            <input id="policy" class="mr-2" type="checkbox" name="policy">
-            <label for="policy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-          </div>
-          <button type="submit" class="submit-btn fz-16 text-white bg-primary p-4">確認送出</button>
-        </form>
+      <div class="container">
+        <h3 class="section-title fz-48 text-red_200 fw-bold mb-12">聯絡我們</h3>
+        <div class="form-container">
+          <p class="contact-text fz-20 mb-6">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+          <form action="">
+            <div class="input-group mb-4">
+              <label class="mb-2" for="name">姓名</label>
+              <input id="name" class="px-3 py-6px" type="text" placeholder="陳小明">
+            </div>
+            <div class="input-group mb-4">
+              <label class="mb-2" for="tel">聯絡電話</label>
+              <input id="tel" class="px-3 py-6px" type="tel" placeholder="0912-345-678">
+            </div>
+            <div class="input-group mb-4">
+              <label class="mb-2" for="email">電子郵件</label>
+              <input id="email" class="px-3 py-6px" type="email" placeholder="0912-345-678">
+            </div>
+            <div class="input-group mb-4">
+              <label class="mb-2" for="review">意見反應</label>
+              <textarea class="p-3" name="review" id="review" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
+            </div>
+            <div class="policy-group mb-12">
+              <input id="policy" class="mr-2" type="checkbox" name="policy">
+              <label for="policy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+            </div>
+            <button type="submit" class="submit-btn fz-16 text-white bg-primary p-4">確認送出</button>
+          </form>
+        </div>
       </div>
     </div>
 
