切版 RWD(phone 767px) /index

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
       <div class="banner-section">
         <div class="container">
           <h2 class="banner-subtitle text-red_200 fz-48"><span class="font-roboto">Promise-Desert 2020</span> 早春系列</h2>
-          <h1 class="text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
+          <h1 class="banner-title text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
           <a class="products-link text-white fz-20 bg-primary px-3 py-6px" href="/week3-4/pages/products/optical.html">立即購買</a>
         </div>
       </div>
@@ -79,11 +79,13 @@
           <h3 class="section-title text-white fz-48 fw-bold mb-12">聯名設計鏡框</h3>
           <ul class="collaborative-list">
             <li class="collaborative-item">
-              <img src="../assets/images/home-section4-1.png" alt="double a+">
+              <div class="collaborative-item-img collaborative-item-img-1"></div>
+              <!-- <img src="../assets/images/home-section4-1.png" alt="double a+"> -->
               <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">DOUBLE A+</h4>
             </li>
             <li class="collaborative-item">
-              <img src="../assets/images/home-section4-2.png" alt="youth">
+              <div class="collaborative-item-img collaborative-item-img-2"></div>
+              <!-- <img src="../assets/images/home-section4-2.png" alt="youth"> -->
               <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">YOUTH</h4>
             </li>
           </ul>
