切版 RWD(phone 767px) /products/optical, /products/sunglasses

--- a/pages/products/sunglasses.html
+++ b/pages/products/sunglasses.html
@@ -14,7 +14,12 @@
     </div>
 
     <div class="imgs-section mb-20">
-      <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-3.png', '../../assets/images/product-header-4.png']}) -%>
+      <div class="imgs-section-pc">
+        <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-3.png', '../../assets/images/product-header-4.png']}) -%>
+      </div>
+      <div class="imgs-section-tablet">
+        <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-sm-3.png', '../../assets/images/product-header-sm-4.png']}) -%>
+      </div>
     </div>
 
     <h2 class="subtitle font-roboto fz-42">2020 NEW COLLECTION</h2>
