切版 RWD(phone 767px) /locations, /location

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -10,7 +10,7 @@
 
   <div class="locations-wrap pt-24 pb-20">
     <div class="container">
-      <div class="mb-8">
+      <div class="title-section mb-8">
         <%- include('./components/page-title', {title: '門市據點'}); -%>
       </div>
 
