切版 RWD(phone 767px) /questions

--- a/pages/questions.html
+++ b/pages/questions.html
@@ -10,7 +10,7 @@
 
   <div class="questions-wrap pt-24 pb-20">
     <div class="container">
-      <div class="mb-8">
+      <div class="title-section mb-8">
         <%- include('./components/page-title', {title: '常見問題'}); -%>
       </div>
       <h2 class="fz-24 fw-bold mb-6">我想詢問配鏡問題</h2>
