修正圖片路徑

--- a/pages/article.html
+++ b/pages/article.html
@@ -15,10 +15,10 @@
     
     <div class="container">
       <div class="breadcrumb-section mb-2">
-        <a class="text-black" href="/week3-4/pages/index.html">首頁</a>
-        <a class="text-black" href="/week3-4/pages/blog.html">部落格</a>
-        <a class="text-black" href="/week3-4/pages/article.html">特別企劃</a>
-        <a class="text-primary" href="/week3-4/pages/article.html">情人特別企劃</a>
+        <a class="text-black" href="/week3-4/index.html">首頁</a>
+        <a class="text-black" href="/week3-4/blog.html">部落格</a>
+        <a class="text-black" href="/week3-4/article.html">特別企劃</a>
+        <a class="text-primary" href="/week3-4/article.html">情人特別企劃</a>
       </div>
 
       <ul class="tags-list fz-24 fw-bold mb-2">
@@ -31,15 +31,15 @@
           <h1 class="fz-48">情人特別企劃</h1>
           <h2 class="article-subtitle fz-24 mb-4">2020 Valentine’s Special</h2>
           <div class="article-content mb-10">
-            <img class="mb-2" src="../assets/images/blog-1.png" alt="people">
+            <img class="mb-2" src="/assets/images/blog-1.png" alt="people">
             <p class="text-gray_300 mb-10">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-            <img class="mb-2" src="../assets/images/blog-2.png" alt="people">
+            <img class="mb-2" src="/assets/images/blog-2.png" alt="people">
             <p class="text-gray_300 mb-10">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-            <img class="mb-2" src="../assets/images/blog-3.png" alt="people">
+            <img class="mb-2" src="/assets/images/blog-3.png" alt="people">
             <p class="text-gray_300 mb-10">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-            <img class="mb-2" src="../assets/images/blog-4.png" alt="people">
+            <img class="mb-2" src="/assets/images/blog-4.png" alt="people">
             <p class="text-gray_300 mb-10">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-            <img class="mb-2" src="../assets/images/blog-5.png" alt="people">
+            <img class="mb-2" src="/assets/images/blog-5.png" alt="people">
             <p class="text-gray_300 mb-10">2/14(五)-2/20(日)<br>至本店單筆消費滿2980元, 就送情人節限定眼鏡盒1個<br>期間優惠還有~~持他牌鏡框更換鏡片<br>薄型非球面鏡片折300元<br>濾藍光鏡片折500元<br>快快帶上另一半<br>讓彼此每一次睜開眼，都被愛的視線包圍!</p>
           </div>
         </div>
@@ -63,8 +63,8 @@
       <div class="article-footer">
         <div class="share-group pb-4 mb-6">
           <p class="font-roboto fw-bold mr-4">Share</p>
-          <a class="mr-4" href="#"><img class="social-icon" src="../assets/images/logo-facebook.png" alt="facebook"></a>
-          <a href="#"><img class="social-icon" src="../assets/images/logo-instagram.png" alt="instagram"></a>
+          <a class="mr-4" href="#"><img class="social-icon" src="/assets/images/logo-facebook.png" alt="facebook"></a>
+          <a href="#"><img class="social-icon" src="/assets/images/logo-instagram.png" alt="instagram"></a>
         </div>
         <div class="article-link-group">
           <a href="#" class="text-black">
