--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h2 class="banner-subtitle text-red_200 fz-48"><span class="font-roboto">Promise-Desert 2020</span> 早春系列</h2>
           <h1 class="banner-title text-red_200 fz-64 fw-bold mb-1">看得清，才能看得遠</h1>
-          <a class="products-link text-white fz-20 bg-primary px-3 py-6px" href="/week3-4/pages/products/optical.html">立即購買</a>
+          <a class="products-link text-white fz-20 bg-primary px-3 py-6px" href="/week3-4/products/optical.html">立即購買</a>
         </div>
       </div>
 
@@ -24,28 +24,28 @@
           <ul class="intro-list">
             <li class="intro-item mr-6">
               <div class="img-group">
-                <img class="mb-4" src="../assets/images/home-section2-1.png" alt="price">
+                <img class="mb-4" src="/assets/images/home-section2-1.png" alt="price">
                 <h4 class="fz-24 text-red_200 mb-2">單一價格</h4>
               </div>
               <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
             </li>
             <li class="intro-item mr-6">
               <div class="img-group">
-                <img class="mb-4" src="../assets/images/home-section2-2.png" alt="clock">
+                <img class="mb-4" src="/assets/images/home-section2-2.png" alt="clock">
                 <h4 class="fz-24 text-red_200 mb-2">20 分鐘即可取件</h4>
               </div>
               <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
             </li>
             <li class="intro-item mr-6">
               <div class="img-group">
-                <img class="mb-4" src="../assets/images/home-section2-3.png" alt="heart">
+                <img class="mb-4" src="/assets/images/home-section2-3.png" alt="heart">
                 <h4 class="fz-24 text-red_200 mb-2">安心售後服務</h4>
               </div>
               <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
             </li>
             <li class="intro-item">
               <div class="img-group">
-                <img class="mb-4" src="../assets/images/home-section2-4.png" alt="glasses">
+                <img class="mb-4" src="/assets/images/home-section2-4.png" alt="glasses">
                 <h4 class="fz-24 text-red_200 mb-2">關於鏡片</h4>
               </div>
               <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -59,15 +59,15 @@
           <h3 class="section-title fw-bold fz-48 text-red_200 mb-12">經典系列鏡框</h3>
           <ul class="category-list">
             <li class="category-item">
-              <img class="mb-2" src="../assets/images/home-section3-1.png" alt="people">
+              <img class="mb-2" src="/assets/images/home-section3-1.png" alt="people">
               <h4 class="fz-48 text-primary fw-900 font-roboto">OPTICAL</h4>
             </li>
             <li class="category-item">
-              <img class="mb-2" src="../assets/images/home-section3-2.png" alt="people">
+              <img class="mb-2" src="/assets/images/home-section3-2.png" alt="people">
               <h4 class="fz-48 text-primary fw-900 font-roboto">SUNGLASSES</h4>
             </li>
             <li class="category-item">
-              <img class="mb-2" src="../assets/images/home-section3-3.png" alt="people">
+              <img class="mb-2" src="/assets/images/home-section3-3.png" alt="people">
               <h4 class="fz-48 text-primary fw-900 font-roboto">FUNCTIONAL</h4>
             </li>
           </ul>
@@ -80,12 +80,10 @@
           <ul class="collaborative-list">
             <li class="collaborative-item">
               <div class="collaborative-item-img collaborative-item-img-1"></div>
-              <!-- <img src="../assets/images/home-section4-1.png" alt="double a+"> -->
               <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">DOUBLE A+</h4>
             </li>
             <li class="collaborative-item">
               <div class="collaborative-item-img collaborative-item-img-2"></div>
-              <!-- <img src="../assets/images/home-section4-2.png" alt="youth"> -->
               <h4 class="fz-48 text-primary font-roboto fw-900 bg-white py-2">YOUTH</h4>
             </li>
           </ul>
@@ -98,7 +96,7 @@
         <h3 class="section-title fz-48 fw-bold text-red_200 mb-12">顧客推薦</h3>
         <ul class="recommended-list">
           <li class="recommended-item">
-            <img src="../assets/images/home-section5-1.png" alt="people">
+            <img src="/assets/images/home-section5-1.png" alt="people">
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">Jessy</h4>
               <p class="recommended-item-text mb-2">眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -106,7 +104,7 @@
             </div>
           </li>
           <li class="recommended-item">
-            <img src="../assets/images/home-section5-2.png" alt="people">
+            <img src="/assets/images/home-section5-2.png" alt="people">
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">凱倫</h4>
               <p class="recommended-item-text mb-2">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -114,7 +112,7 @@
             </div>
           </li>
           <li class="recommended-item">
-            <img src="../assets/images/home-section5-3.png" alt="people">
+            <img src="/assets/images/home-section5-3.png" alt="people">
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">悠悠</h4>
               <p class="recommended-item-text mb-2">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -122,7 +120,7 @@
             </div>
           </li>
           <li class="recommended-item">
-            <img src="../assets/images/home-section5-4.png" alt="people">
+            <img src="/assets/images/home-section5-4.png" alt="people">
             <div class="recommended-item-main p-4">
               <h4 class="mb-2">Kyuan</h4>
               <p class="recommended-item-text mb-2">服務很好，品質沒有任何問題，非常喜歡。</p>
