--- a/pages/location.html
+++ b/pages/location.html
@@ -20,7 +20,7 @@
 
       <div class="location-main">
         <div class="location-card text-black_100 mr-6">
-          <img class="location-card-img" src="../assets/images/store-1.png" alt="store">
+          <img class="location-card-img" src="/assets/images/store-1.png" alt="store">
           <div class="location-card-main">
             <h2 class="location-card-title fz-24 px-6 py-2">台北中山旗艦店</h2>
             <div class="location-card-main fz-20 px-6 py-4">
