--- a/pages/products/optical.html
+++ b/pages/products/optical.html
@@ -14,17 +14,17 @@
     </div>
 
     <div class="imgs-section mb-20">
-      <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-1.png', '../../assets/images/product-header-2.png']}) -%>
+      <%- include('./components/imgs-banner', {imgs: ['/assets/images/product-header-1.png', '/assets/images/product-header-2.png']}) -%>
     </div>
     <div class="imgs-section-tablet mb-20">
-      <%- include('./components/imgs-banner', {imgs: ['../../assets/images/product-header-sm-1.png', '../../assets/images/product-header-sm-2.png']}) -%>
+      <%- include('./components/imgs-banner', {imgs: ['/assets/images/product-header-sm-1.png', '/assets/images/product-header-sm-2.png']}) -%>
     </div>
 
     <h2 class="subtitle font-roboto fz-42">Celluloid Combi</h2>
     <h1 class="title fz-32 mb-8">賽璐珞鈦金屬混合鏡框</h1>
   
     <div class="products-section container mb-20">
-      <%- include('./components/products-list', {perRow: 4, products: [{title: 'BJ41600S', src :'../../assets/images/product-1.png'}, {title: 'BJ41600T', src: '../../assets/images/product-2.png'}, {title: 'BJ41600U', src: '../../assets/images/product-3.png'}, {title: 'BJ41600V', src: '../../assets/images/product-4.png'}, {title: 'BJ41600W', src: '../../assets/images/product-5.png'}, {title: 'BJ41600X', src: '../../assets/images/product-6.png'}, {title: 'BJ41600Y', src: '../../assets/images/product-7.png'}, {title: 'BJ41600Z', src: '../../assets/images/product-8.png'}, {title: 'BJ41600A', src: '../../assets/images/product-9.png'}, {title: 'BJ41600B', src: '../../assets/images/product-10.png'}, {title: 'BJ41600C', src: '../../assets/images/product-11.png'}, {title: 'BJ41600D', src: '../../assets/images/product-12.png'}]}) -%>
+      <%- include('./components/products-list', {perRow: 4, products: [{title: 'BJ41600S', src :'/assets/images/product-1.png'}, {title: 'BJ41600T', src: '/assets/images/product-2.png'}, {title: 'BJ41600U', src: '/assets/images/product-3.png'}, {title: 'BJ41600V', src: '/assets/images/product-4.png'}, {title: 'BJ41600W', src: '/assets/images/product-5.png'}, {title: 'BJ41600X', src: '/assets/images/product-6.png'}, {title: 'BJ41600Y', src: '/assets/images/product-7.png'}, {title: 'BJ41600Z', src: '/assets/images/product-8.png'}, {title: 'BJ41600A', src: '/assets/images/product-9.png'}, {title: 'BJ41600B', src: '/assets/images/product-10.png'}, {title: 'BJ41600C', src: '/assets/images/product-11.png'}, {title: 'BJ41600D', src: '/assets/images/product-12.png'}]}) -%>
     </div>
   
     <div class="pagination-section mb-20">
@@ -34,6 +34,6 @@
 
   <%- include('./layout/footer'); -%>
   
-  <script src="../../main.js" type="module"></script>
+  <script src="/main.js" type="module"></script>
 </body>
 </html>
