--- a/products/optical.html
+++ b/products/optical.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="module" crossorigin src="/week3-4/assets/all-9758c319.js"></script>
-  <link rel="stylesheet" href="/week3-4/assets/all-9b645e8c.css">
+  <script type="module" crossorigin src="/week3-4/assets/all-9f0bb031.js"></script>
+  <link rel="stylesheet" href="/week3-4/assets/all-f26d7be7.css">
 </head>
 <body>
   <header class="header bg-primary py-4">
@@ -29,7 +29,7 @@
   <a class="products-nav-link font-roboto text-black fz-32 py-6" href="#">functional</a>
 </nav>    </div>
 
-    <div class="imgs-section mb-20">
+    <div class="imgs-section container mb-20">
       <ul class="imgs-banner">
   
     <li class="img-item"><img class="banner-img" src="/week3-4/assets/product-header-1-7276f627.png" alt="glasses"></li>
