修正 /products/optical imgs-banner 圖片顯示

--- a/pages/products/optical.html
+++ b/pages/products/optical.html
@@ -13,7 +13,7 @@
       <%- include('./components/products-nav', {active: 'optical'}) -%>
     </div>
 
-    <div class="imgs-section container mb-20">
+    <div class="imgs-section mb-20">
       <%- include('./components/imgs-banner', {imgs: ['/assets/images/product-header-1.png', '/assets/images/product-header-2.png']}) -%>
     </div>
     <div class="imgs-section-tablet mb-20">
