--- a/products/optical.html
+++ b/products/optical.html
@@ -29,7 +29,7 @@
   <a class="products-nav-link font-roboto text-black fz-32 py-6" href="#">functional</a>
 </nav>    </div>
 
-    <div class="imgs-section container mb-20">
+    <div class="imgs-section mb-20">
       <ul class="imgs-banner">
   
     <li class="img-item"><img class="banner-img" src="/week3-4/assets/product-header-1-7276f627.png" alt="glasses"></li>
